Adding code for level 4

--- a/templates/results.html
+++ b/templates/results.html
@@ -11,6 +11,7 @@
 						<ul>{{ author }}</ul>
 					{% endfor %}
 				</h5>
+				<a href="/favorite/{{ book.id}}">Add to favorites</a>
 			</li>
 		{% endfor %}
 		</ul>
