--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Favorites{% endblock %}
 {% block body %}
-<h1>Favorites</h1>
+<h1>{{current_user.name}}'s Favorites</h1>
 {% if favorites|length > 0 %}
     <ul>
     {% for fav in favorites  %}
@@ -12,6 +12,6 @@
     {% endfor %}
     </ul>
 {% else %}
-    <p>You haven't added any favorites yet</p>
+    <p>You haven't added any favorites yet.</p>
 {% endif %}
 {% endblock %}
