Adding login buttons

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,5 +3,6 @@
 {% block body %}
     <h1>Reading List App</h1>
     <p>This web app allows users to search for books and add them to their reading lists!</p>
-    <a href="/search"><button class="launch-button">Launch App</button></a>
+    <a href="/login"><button class="launch-button">Login</button></a>
+    <a href="/register"><button class="launch-button">Register</button></a>
 {% endblock %}
